--- a/scss/_base_forms-tick-elements.scss
+++ b/scss/_base_forms-tick-elements.scss
@@ -406,22 +406,22 @@ $box-offsets-top: (
   // common properties
   %vf-tick-elements--light-theme {
     & + label {
-      color: map-get($colors--light-theme, text-default);
+      color: $colors--light-theme__text-default;
 
       &::before {
-        background: map-get($colors--light-theme, background);
-        border: 1px solid map-get($colors--light-theme, border-high-contrast);
+        background: $colors--light-theme__background;
+        border: 1px solid $colors--light-theme__border-high-contrast;
       }
     }
   }
 
   %vf-tick-elements--dark-theme {
     & + label {
-      color: map-get($colors--dark-theme, text-default);
+      color: $colors--dark-theme__text-default;
 
       &::before {
-        background: map-get($colors--dark-theme, background);
-        border: 1px solid map-get($colors--dark-theme, border-high-contrast);
+        background: $colors--dark-theme__background;
+        border: 1px solid $colors--dark-theme__border-high-contrast;
       }
     }
   }
@@ -430,7 +430,7 @@ $box-offsets-top: (
   %vf-checkbox--light-theme {
     & + label {
       &::after {
-        color: map-get($colors--light-theme, background);
+        color: $colors--light-theme__background;
       }
     }
   }
@@ -438,7 +438,7 @@ $box-offsets-top: (
   %vf-checkbox--dark-theme {
     & + label {
       &::after {
-        color: map-get($colors--dark-theme, text-default);
+        color: $colors--dark-theme__text-default;
       }
     }
   }
@@ -447,7 +447,7 @@ $box-offsets-top: (
   %vf-radio--light-theme {
     & + label {
       &::after {
-        background-color: map-get($colors--light-theme, background);
+        background-color: $colors--light-theme__background;
       }
     }
   }
