--- a/scss/_base_hr.scss
+++ b/scss/_base_hr.scss
@@ -37,11 +37,11 @@
   }
 
   %hr--dark-theme {
-    background: map-get($colors--dark-theme, border-default);
+    background: $colors--dark-theme__border-default;
   }
 
   %hr--light-theme {
-    background: map-get($colors--light-theme, border-default);
+    background: $colors--light-theme__border-default;
   }
 
   .row.is-bordered {
