--- a/scss/_base_typography-max-widths.scss
+++ b/scss/_base_typography-max-widths.scss
@@ -1,3 +1,15 @@
+@mixin vf-b-typography-max-widths {
+  %max-width--p {
+    max-width: map-get($max-widths, default);
+  }
+
+  //expose measure as a class
+  %measure--p,
+  .measure--p {
+    @extend %max-width--p;
+  }
+}
+
 // Optimal max-width for body copy
 @mixin p-max-width {
   max-width: map-get($max-widths, default);
