--- a/scss/_base_typography.scss
+++ b/scss/_base_typography.scss
@@ -6,6 +6,7 @@
 // Typographic element styles
 @mixin vf-b-typography {
   @include vf-b-typography-fontfaces;
+  @include vf-b-typography-max-widths;
 
   html {
     // sass-lint:disable no-vendor-prefixes
