--- a/scss/_patterns_subnav.scss
+++ b/scss/_patterns_subnav.scss
@@ -132,43 +132,43 @@
   }
 
   %subnav-item--light-theme {
-    background-color: map-get($colors--light-theme, background);
+    background-color: $colors--light-theme__background;
 
     &,
     &:active,
     &:focus &:visited {
-      color: map-get($colors--light-theme, text-default);
+      color: $colors--light-theme__text-default;
     }
 
     &:hover {
-      color: map-get($colors--light-theme, text-hover);
+      color: $colors--light-theme__text-default;
     }
 
     &::before {
       @media (max-width: $breakpoint-navigation-threshold) {
         // separator color on small screens
-        background: map-get($colors--light-theme, border-default);
+        background: $colors--light-theme__border-default;
       }
     }
   }
 
   %subnav-item--dark-theme {
-    background-color: map-get($colors--dark-theme, background);
+    background-color: $colors--dark-theme__background;
 
     &,
     &:active,
     &:focus &:visited {
-      color: map-get($colors--dark-theme, text-default);
+      color: $colors--dark-theme__text-default;
     }
 
     &:hover {
-      color: map-get($colors--dark-theme, text-hover);
+      color: $colors--dark-theme__text-hover;
     }
 
     &::before {
       @media (max-width: $breakpoint-navigation-threshold) {
         // separator color on small screens
-        background: map-get($colors--dark-theme, border-default);
+        background: $colors--dark-theme__border-default;
       }
     }
   }
