--- a/scss/_base_typography.scss
+++ b/scss/_base_typography.scss
@@ -14,6 +14,9 @@
     -webkit-font-smoothing: antialiased;
     // sass-lint:enable no-vendor-prefixes
     color: $color-dark;
+    @if $font-display-option {
+      font-display: $font-display-option;
+    }
     font-family: unquote($font-base-family);
     // sass-lint:disable no-misspelled-properties
     font-smoothing: subpixel-antialiased;
