--- a/scss/_settings_font.scss
+++ b/scss/_settings_font.scss
@@ -2,7 +2,8 @@
 $font-base-family: '"Ubuntu", -apple-system, "Segoe UI", "Roboto", "Oxygen", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif' !default;
 $font-monospace: '"Ubuntu Mono", Consolas, Monaco, Courier, monospace' !default;
 $font-heading-family: $font-base-family !default;
-$font-import: 'http://fonts.gstatic.com/s/ubuntu/v9/' !default;
+$font-use-subset-latin: false !default;
+$font-display-option: false !default; // options - auto | block | swap | fallback | optional
 $font-allow-cyrillic-greek-latin: false !default;
 $increase-font-size-on-larger-screens: true !default;
 $font-size-ratio--largescreen: 1.125 !default;
