Move font-display to @font-face

--- a/scss/_base_fontfaces.scss
+++ b/scss/_base_fontfaces.scss
@@ -2,6 +2,9 @@
   @if str-index($font-base-family, 'Ubuntu') {
     @if $font-use-subset-latin {
       @font-face {
+        @if $font-display-option {
+          font-display: $font-display-option;
+        }
         font-family: 'Ubuntu';
         font-style: normal;
         font-weight: 300;
@@ -10,6 +13,9 @@
       }
 
       @font-face {
+        @if $font-display-option {
+          font-display: $font-display-option;
+        }
         font-family: 'Ubuntu';
         font-style: normal;
         font-weight: 400;
@@ -18,6 +24,9 @@
       }
 
       @font-face {
+        @if $font-display-option {
+          font-display: $font-display-option;
+        }
         font-family: 'Ubuntu';
         font-style: italic;
         font-weight: 300;
@@ -26,6 +35,9 @@
       }
 
       @font-face {
+        @if $font-display-option {
+          font-display: $font-display-option;
+        }
         font-family: 'Ubuntu';
         font-style: italic;
         font-weight: 400;
@@ -34,6 +46,9 @@
       }
 
       @font-face {
+        @if $font-display-option {
+          font-display: $font-display-option;
+        }
         font-family: 'Ubuntu';
         font-style: normal;
         font-weight: 100;
@@ -42,6 +57,9 @@
       }
 
       @font-face {
+        @if $font-display-option {
+          font-display: $font-display-option;
+        }
         font-family: 'Ubuntu Mono';
         font-style: normal;
         font-weight: 300;
@@ -50,6 +68,9 @@
       }
 
       @font-face {
+        @if $font-display-option {
+          font-display: $font-display-option;
+        }
         font-family: 'Ubuntu Mono';
         font-style: normal;
         font-weight: 400;
@@ -58,6 +79,9 @@
       }
     } @else {
       @font-face {
+        @if $font-display-option {
+          font-display: $font-display-option;
+        }
         font-family: 'Ubuntu';
         font-style: normal;
         font-weight: 300;
@@ -65,6 +89,9 @@
       }
 
       @font-face {
+        @if $font-display-option {
+          font-display: $font-display-option;
+        }
         font-family: 'Ubuntu';
         font-style: normal;
         font-weight: 400;
@@ -72,6 +99,9 @@
       }
 
       @font-face {
+        @if $font-display-option {
+          font-display: $font-display-option;
+        }
         font-family: 'Ubuntu';
         font-style: italic;
         font-weight: 300;
@@ -79,6 +109,9 @@
       }
 
       @font-face {
+        @if $font-display-option {
+          font-display: $font-display-option;
+        }
         font-family: 'Ubuntu';
         font-style: italic;
         font-weight: 400;
@@ -86,6 +119,9 @@
       }
 
       @font-face {
+        @if $font-display-option {
+          font-display: $font-display-option;
+        }
         font-family: 'Ubuntu';
         font-style: normal;
         font-weight: 100;
@@ -93,6 +129,9 @@
       }
 
       @font-face {
+        @if $font-display-option {
+          font-display: $font-display-option;
+        }
         font-family: 'Ubuntu Mono';
         font-style: normal;
         font-weight: 300;
@@ -100,6 +139,9 @@
       }
 
       @font-face {
+        @if $font-display-option {
+          font-display: $font-display-option;
+        }
         font-family: 'Ubuntu Mono';
         font-style: normal;
         font-weight: 400;
@@ -110,6 +152,9 @@
     @if $font-allow-cyrillic-greek-latin {
       // cyrillic-ext
       @font-face {
+        @if $font-display-option {
+          font-display: $font-display-option;
+        }
         font-family: 'Ubuntu';
         font-style: normal;
         font-weight: 300;
@@ -119,6 +164,9 @@
 
       // cyrillic
       @font-face {
+        @if $font-display-option {
+          font-display: $font-display-option;
+        }
         font-family: 'Ubuntu';
         font-style: normal;
         font-weight: 300;
@@ -128,6 +176,9 @@
 
       // greek-ext
       @font-face {
+        @if $font-display-option {
+          font-display: $font-display-option;
+        }
         font-family: 'Ubuntu';
         font-style: normal;
         font-weight: 300;
@@ -137,6 +188,9 @@
 
       // greek
       @font-face {
+        @if $font-display-option {
+          font-display: $font-display-option;
+        }
         font-family: 'Ubuntu';
         font-style: normal;
         font-weight: 300;
@@ -146,6 +200,9 @@
 
       // latin-ext
       @font-face {
+        @if $font-display-option {
+          font-display: $font-display-option;
+        }
         font-family: 'Ubuntu';
         font-style: normal;
         font-weight: 300;
@@ -155,6 +212,9 @@
 
       // latin
       @font-face {
+        @if $font-display-option {
+          font-display: $font-display-option;
+        }
         font-family: 'Ubuntu';
         font-style: normal;
         font-weight: 300;
