--- a/scss/_settings_font.scss
+++ b/scss/_settings_font.scss
@@ -3,7 +3,7 @@ $font-base-family: '"Ubuntu", -apple-system, "Segoe UI", "Roboto", "Oxygen", "Ca
 $font-monospace: '"Ubuntu Mono", Consolas, Monaco, Courier, monospace' !default;
 $font-heading-family: $font-base-family !default;
 $font-use-subset-latin: false !default;
-$font-display-option: false !default; // options - auto | block | swap | fallback | optional
+$font-display-option: auto !default; // options - auto | block | swap | fallback | optional
 $font-allow-cyrillic-greek-latin: false !default;
 $increase-font-size-on-larger-screens: true !default;
 $font-size-ratio--largescreen: 1.125 !default;
