fix selected menu-items

--- a/scss/_patterns_navigation.scss
+++ b/scss/_patterns_navigation.scss
@@ -247,6 +247,7 @@ $nav-border-bottom-thickness: 1px;
   }
 
   background-color: $color-navigation-background;
+  $faded-opacity: 0.6;
 
   .p-navigation__link > a,
   .p-navigation__toggle--close,
@@ -258,13 +259,13 @@ $nav-border-bottom-thickness: 1px;
     }
 
     &:hover {
-      opacity: 0.6;
+      opacity: $faded-opacity;
     }
   }
 
   @include deprecate('3.0.0', 'Selectors should use classes.') {
     .p-navigation__link.is-selected > a {
-      color: $color-navigation-text;
+      opacity: $faded-opacity;
     }
   }
 
@@ -294,13 +295,13 @@ $nav-border-bottom-thickness: 1px;
     }
 
     &:hover {
-      opacity: 0.6;
+      opacity: $faded-opacity;
     }
   }
 
   @include deprecate('3.0.0', 'Selectors should use classes.') {
     .p-navigation__link.is-selected > a {
-      color: $color-navigation-text;
+      opacity: $faded-opacity;
     }
   }
 
