Fully deprecate all non-recommended max-with options

--- a/scss/_base_typography-max-widths.scss
+++ b/scss/_base_typography-max-widths.scss
@@ -1,9 +1,9 @@
 @mixin vf-b-typography-max-widths {
-  %max-width--p {
-    max-width: map-get($max-widths, default);
-  }
+  @include deprecate('3.0.0', 'Use the `p-max-width` mixin instead') {
+    %max-width--p {
+      max-width: map-get($max-widths, default);
+    }
 
-  @include deprecate('3.0.0', 'Use `%max-width--p` instead') {
     %measure--p,
     .measure--p {
       @extend %max-width--p;
