--- a/scss/_patterns_search-box.scss
+++ b/scss/_patterns_search-box.scss
@@ -36,6 +36,7 @@
   .p-search-box__input {
     flex: 1 1 100%;
     margin-bottom: 0;
+    padding-right: calc(2 * #{2 * $spv-nudge + map-get($line-heights, default-text)});
     position: absolute;
 
     &::-webkit-search-cancel-button {
