doc page for theming

--- a/scss/_base_forms-tick-elements.scss
+++ b/scss/_base_forms-tick-elements.scss
@@ -460,7 +460,7 @@ $box-offsets-top: (
     }
   }
 
-  @if (map-get($theme-default--dark, forms) == true) {
+  @if ($theme-default-forms == 'dark') {
     [type='checkbox'] {
       @extend %vf-tick-elements--dark-theme;
       @extend %vf-checkbox--dark-theme;
