--- a/scss/_base_hr.scss
+++ b/scss/_base_hr.scss
@@ -16,7 +16,7 @@
   }
 
   // Theming
-  @if (map-get($theme-default--dark, hr) == true) {
+  @if ($theme-default-hr == 'dark') {
     hr {
       @extend %hr--dark-theme;
     }
