--- a/scss/_patterns_search-box.scss
+++ b/scss/_patterns_search-box.scss
@@ -115,7 +115,7 @@
     }
   }
 
-  @if (map-get($theme-default--dark, p-search-box) == true) {
+  @if ($theme-default-p-search-box == 'dark') {
     .p-search-box__input {
       @extend %search-box-input--dark;
     }
