--- a/scss/_patterns_subnav.scss
+++ b/scss/_patterns_subnav.scss
@@ -41,7 +41,7 @@
   }
 
   // Theming
-  @if (map-get($theme-default--dark, nav) == true) {
+  @if ($theme-default-nav == 'dark') {
     .p-subnav::after {
       @include vf-icon-chevron($color-light);
     }
