--- a/scss/_settings_themes.scss
+++ b/scss/_settings_themes.scss
@@ -1,4 +1,4 @@
 $theme-default-forms: 'light' !default;
 $theme-default-hr: 'light' !default;
-$theme-default-nav: 'dark' !default;
-$theme-default-p-search-box: 'dark' !default;
+$theme-default-nav: 'light' !default;
+$theme-default-p-search-box: 'light' !default;
