Update off-screen example

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -134,7 +134,7 @@
                   <li class="p-sidebar-nav__item"><a class="p-link--soft {% if page.url == '/utilities/image-position/' %}is-active{% endif %}" href="/utilities/image-position/">Image position</a></li>
                   <li class="p-sidebar-nav__item"><a class="p-link--soft {% if page.url == '/utilities/margin-collapse/' %}is-active{% endif %}" href="/utilities/margin-collapse/">Margin collapse</a></li>
                   <li class="p-sidebar-nav__item"><a class="p-link--soft {% if page.url == '/utilities/no-print/' %}is-active{% endif %}" href="/utilities/no-print/">No print</a></li>
-                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if page.url == '/utilities/off-screen/' %}is-active{% endif %}" href="/utilities/off-screen/">Off-screen elements</a></li>
+                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if page.url == '/utilities/off-screen/' %}is-active{% endif %}" href="/utilities/off-screen/">Off-screen</a></li>
                   <li class="p-sidebar-nav__item"><a class="p-link--soft {% if page.url == '/utilities/padding-collapse/' %}is-active{% endif %}" href="/utilities/padding-collapse/">Padding collapse</a></li>
                   <li class="p-sidebar-nav__item"><a class="p-link--soft {% if page.url == '/utilities/show/' %}is-active{% endif %}" href="/utilities/show/">Show</a></li>
                   <li class="p-sidebar-nav__item"><a class="p-link--soft {% if page.url == '/utilities/vertically-center/' %}is-active{% endif %}" href="/utilities/vertically-center/">Vertically center</a></li>
