font metrics wip

--- a/scss/_base_button.scss
+++ b/scss/_base_button.scss
@@ -14,7 +14,7 @@
     border-style: solid;
     border-width: 1px;
     cursor: pointer;
-    display: inline-flex;
+    display: inline-block;
     font-size: 1rem;
     font-weight: 300;
     justify-content: center;
