--- a/scss/_settings_font.scss
+++ b/scss/_settings_font.scss
@@ -13,3 +13,8 @@ $base-font-sizes: (
   large: $font-size-largescreen
 ) !default;
 $font-weight-bold: 400 !default;
+
+// Ubuntu Font metrics
+$baseline-position: 0.932em !default; // HHead Ascent from the font file's metrics. Viewable in Fontforge Font Information>OS/2
+$cap-height: 0.693em !default;
+$x-height: 0.517em !default;
