--- a/scss/_vanilla.scss
+++ b/scss/_vanilla.scss
@@ -51,6 +51,7 @@
 @import 'utilities_embedded-media';
 @import 'utilities_equal-height';
 @import 'utilities_floats';
+@import 'utilities_font-metrics';
 @import 'utilities_hide';
 @import 'utilities_image-position';
 @import 'utilities_layout';
@@ -125,5 +126,6 @@
   @include vf-u-show;
   @include vf-u-vertical-spacing;
   @include vf-u-vertically-center;
+  @include vf-u-visualise-baseline;
   @include vf-u-no-print;
 }
