--- a/scss/_patterns_notifications.scss
+++ b/scss/_patterns_notifications.scss
@@ -57,7 +57,7 @@
 
   .p-notification__response,
   .p-notification--floating {
-    @include u-no-max-width;
+    @include vf-u-max-width;
   }
 }
 
