rename u-no-max-width mixin; fix notification

--- a/scss/_vanilla.scss
+++ b/scss/_vanilla.scss
@@ -121,7 +121,7 @@
   @include vf-u-image-position;
   @include vf-u-layout;
   @include vf-u-margin-collapse;
-  @include vf-u-max-width;
+  @include vf-u-no-max-width;
   @include vf-u-off-screen;
   @include vf-u-padding-collapse;
   @include vf-u-show;
