revert icon sizes map

--- a/scss/_settings_spacing.scss
+++ b/scss/_settings_spacing.scss
@@ -140,9 +140,9 @@ $max-widths: (
 $icon-sizes: (
   accordion: $sp-unit * 1.5,
   default: $sp-unit * 2,
-  heading-icon--x-small: $sp-unit * 4,
+  heading-icon--x-small: $sp-unit * 3,
   heading-icon--small: $sp-unit * 4,
-  4 heading-icon: $sp-unit * 5,
+  heading-icon: $sp-unit * 5,
   thumb: $sp-unit * 6,
   thumb--large: $sp-unit * 12
 ) !default;
